Release 0.31 - April ?, 2005

Note:
- Task Coach migrated to Python 2.4.1 and wxPython 2.5.5.1.



Release 0.30 - April 11, 2005

Bugs fixed:
- More than one task due today would crash Task Coach (1180641).



Release 0.29 - April 10, 2005

Bugs fixed:
- New effort in the context menu did not work in release 0.28 
  (1178562).
- When selecting 'View' -> 'Completed tasks' in the task tree, only
  completed root tasks were hidden (1179372).
  
Features added:
- What tab is active is now a persistent setting. This includes the tabs 
  and choices in the mainwindow and the effort choices in the task editor
  (1178779).
- Reordered 'View' -> 'Tasks due before end of' menu (1178880).
- Added a separate 'Budget' tab in the task editor.
- Taskbar icon now indicates whether task effort tracking is on (1178057).
- Effort is sorted from most recent to least recent (1179332).
- Changed task/subtask separator in the task list view from '|' to ' -> '
  (1179374).



Release 0.28 - April 6, 2005

Bugs fixed:
- Hitting return or double click to edit effort in the task editor 
  now works (1172164).
- Subtasks with the same name would only be visible once in the task tree
  view.

Features added:
- You can hide composite tasks in the task list view so that only leaf
  tasks are visible. Menu item 'View' -> 'Tasks with subtasks'. Requested 
  by Brian Crounse.



Release 0.27 - April 4, 2005

Features added:
- Tasks can have a budget.



Release 0.26 - March 28, 2005

Bugs fixed:
- Marking a task completed did not stop effort tracking (1159918).
- Reading lots of efforts was slow.

Features added:
- Save button is disabled when saving is not necessary, requested by Mike
  Vorozhbensky (1164472).
- Effort records have a description field, requested by Kent (1167147).



Release 0.25 - March 13, 2005 

Bugs fixed:
- The menu item 'Effort' -> 'New effort' did not work in release 0.24.

Features added:
- XML export now includes effort records.